--- a/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
@@ -89,7 +89,7 @@
             <Container class="javax.swing.JPanel" name="jPanel3">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="cc" red="cc" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
               </Properties>
 
@@ -133,17 +133,19 @@
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                           <Component id="jTextField19" min="-2" max="-2" attributes="0"/>
                           <EmptySpace pref="110" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="agregarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="eliminarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="editarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="refrescarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="garageCamiones" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Component id="mostrarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                   <Component id="txtMarcaCamionBuscar1" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="agregarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="eliminarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="editarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="refrescarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="garageCamiones" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="mostrarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -178,12 +180,17 @@
                 <Component class="javax.swing.JLabel" name="jLabel4">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI Emoji" size="12" style="1"/>
+                      <Font name="Nirmala UI" size="12" style="1"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="MARCA"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar1">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nirmala UI" size="12" style="0"/>
+                    </Property>
+                  </Properties>
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane4">
                   <AuxValues>
@@ -194,6 +201,9 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="tblRegistroCamiones1">
                       <Properties>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Nirmala UI" size="12" style="0"/>
+                        </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="0" rowCount="4"/>
                         </Property>
@@ -207,7 +217,7 @@
                 <Component class="javax.swing.JButton" name="buscarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -227,7 +237,7 @@
                 <Component class="javax.swing.JButton" name="refrescarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -247,7 +257,7 @@
                 <Component class="javax.swing.JButton" name="agregarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -267,7 +277,7 @@
                 <Component class="javax.swing.JButton" name="mostrarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -287,7 +297,7 @@
                 <Component class="javax.swing.JButton" name="editarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -307,7 +317,7 @@
                 <Component class="javax.swing.JButton" name="eliminarCamion">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -327,7 +337,7 @@
                 <Component class="javax.swing.JButton" name="garageCamiones">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="66" red="66" type="rgb"/>
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
                     </Property>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="1"/>
@@ -350,6 +360,9 @@
         </Container>
         <Component class="javax.swing.JComboBox" name="txtMenu">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Nirmala UI" size="12" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
             </Property>
