OPTIMIZACION DE PROCESOS Y DISEÑO NO.8

--- a/ProyectoPooDist/src/GestionDeCamiones/GARAGEGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/GARAGEGESTIONCAMIONES.form
@@ -452,8 +452,8 @@
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="2">
-                        <StringItem index="0" value="Descompuesto"/>
-                        <StringItem index="1" value="Funcional"/>
+                        <StringItem index="0" value="FUNCIONAL"/>
+                        <StringItem index="1" value="DESCOMPUESTO"/>
                       </StringArray>
                     </Property>
                   </Properties>
