--- a/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
@@ -92,7 +92,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="jScrollPane4" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jTextField19" min="-2" pref="433" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
@@ -101,10 +102,12 @@
                                           <Component id="txtMarcaCamionBuscar1" min="-2" pref="234" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="buscarCamion" min="-2" pref="95" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="refrescarCamion" min="-2" pref="95" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="eliminarUsuario" min="-2" pref="95" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="agregarCamion" min="-2" pref="95" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
@@ -112,11 +115,8 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="editarCamion" min="-2" pref="95" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="eliminarCamion" min="-2" pref="95" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="garageCamiones" min="-2" pref="95" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jScrollPane4" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jPanel7" min="-2" pref="195" max="-2" attributes="0"/>
@@ -133,12 +133,12 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                   <Component id="agregarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                                  <Component id="eliminarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                                   <Component id="editarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                                  <Component id="refrescarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                                  <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                                   <Component id="mostrarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                                   <Component id="garageCamiones" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="eliminarUsuario" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="refrescarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                                  <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                               </Group>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="txtMarcaCamionBuscar1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -312,26 +312,6 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editarCamionActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="eliminarCamion">
-                  <Properties>
-                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="a9" green="6f" red="55" type="rgb"/>
-                    </Property>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Nirmala UI" size="12" style="1"/>
-                    </Property>
-                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="ELIMINAR"/>
-                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-                      <Border info="null"/>
-                    </Property>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eliminarCamionActionPerformed"/>
-                  </Events>
-                </Component>
                 <Component class="javax.swing.JButton" name="garageCamiones">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -401,6 +381,26 @@
                     </Component>
                   </SubComponents>
                 </Container>
+                <Component class="javax.swing.JButton" name="eliminarUsuario">
+                  <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="a9" green="6f" red="55" type="rgb"/>
+                    </Property>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Nirmala UI" size="12" style="1"/>
+                    </Property>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="ELIMINAR"/>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="null"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eliminarUsuarioActionPerformed"/>
+                  </Events>
+                </Component>
               </SubComponents>
             </Container>
           </SubComponents>
