--- a/ProyectoPooDist/src/GestionDeCamiones/MODIFICARGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/MODIFICARGESTIONCAMIONES.form
@@ -244,10 +244,10 @@
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="En viaje"/>
-                    <StringItem index="1" value="Libre"/>
-                    <StringItem index="2" value="Descompuesto"/>
-                    <StringItem index="3" value="Funcional"/>
+                    <StringItem index="0" value="FUNCIONAL"/>
+                    <StringItem index="1" value="DESCOMPUESTO"/>
+                    <StringItem index="2" value="EN MANTENIMIENTO"/>
+                    <StringItem index="3" value="NO DISPONIBLE"/>
                   </StringArray>
                 </Property>
               </Properties>
